Solved : info title & close buttons have wrong margin & padding

--- a/css/game.css
+++ b/css/game.css
@@ -236,7 +236,7 @@
 #info h2 {
   font-size: 2.7em;
   flex: 1 1 auto;
-  margin: 0.4em;
+  margin: 0.4em 1.5em;
 }
 
 #info p {
@@ -264,6 +264,7 @@
   position: absolute;
   /* z-index: 1; */
   margin: 5px;
+  padding: 0;
   right: 0;
   top: 0;
   height: 1.5em;
